# creedflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: desktop.yml  release-macos.yml
CodeForge/: Package.swift
CodeForge/Resources/: Creed.entitlements  Info.plist
CodeForge/Scripts/: package-app.sh
CreedFlow/: .gitignore  Package.swift
Scripts/: creedflow-cli.sh
creedflow-desktop/: .gitignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
creedflow-desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
creedflow-desktop/src-tauri/capabilities/: default.json
creedflow-desktop/src-tauri/icons/: icon.icns
creedflow-desktop/src-tauri/src/: lib.rs  main.rs  state.rs
creedflow-desktop/src-tauri/src/agents/: analyzer.rs  coder.rs  content_writer.rs  designer.rs  devops.rs  image_generator.rs  mod.rs  monitor.rs  planner.rs  publisher.rs  reviewer.rs  tester.rs  video_editor.rs
creedflow-desktop/src-tauri/src/backends/: claude.rs  codex.rs  detect.rs  gemini.rs  llamacpp.rs  lmstudio.rs  mlx.rs  mod.rs  ollama.rs  opencode.rs
creedflow-desktop/src-tauri/src/commands/: agents.rs  assets.rs  automation.rs  backends.rs  chat.rs  costs.rs  database.rs  deploy.rs  git.rs  issue_tracking.rs  mcp.rs  mod.rs  notifications.rs  personas.rs  platform.rs  projects.rs  prompts.rs  publishing.rs  reviews.rs  settings.rs  tasks.rs  updates.rs
creedflow-desktop/src-tauri/src/db/: migrations.rs  mod.rs  models.rs
creedflow-desktop/src-tauri/src/engine/: dependency.rs  mod.rs  orchestrator.rs  retry.rs  runner.rs  scheduler.rs  task_queue.rs
creedflow-desktop/src-tauri/src/mcp_server/: main.rs  protocol.rs  resources.rs  tools.rs
creedflow-desktop/src-tauri/src/services/: asset_storage.rs  asset_versioning.rs  content_exporter.rs  editor_detector.rs  git.rs  git_branch_manager.rs  github.rs  health.rs  issue_tracking.rs  mcp.rs  mod.rs  notifications.rs  process_tracker.rs  slack.rs  telegram.rs  thumbnail.rs  webhook_server.rs
creedflow-desktop/src-tauri/src/services/publishing/: medium.rs  mod.rs  social.rs  wordpress.rs
creedflow-desktop/src-tauri/src/util/: ndjson.rs
docs/: DEVELOPMENT_PLAN.md  social-media-content.md
shared/: migrations.sql
(+477 files in other folders)
