[package]
name = "creedflow-desktop"
version = "0.1.0"
description = "CreedFlow — AI Orchestration Platform"
authors = ["CreedFlow"]
edition = "2021"

[lib]
name = "creedflow_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "creedflow-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
dirs = "5"
sha2 = "0.10"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
regex = "1"
once_cell = "1"
open = "5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_System_Threading",
  "Win32_Foundation",
] }
