[package]
name = "creedflow-desktop"
version = "1.6.0"
description = "CreedFlow — AI Orchestration Platform"
authors = ["CreedFlow"]
edition = "2021"
default-run = "creedflow-desktop"

[lib]
name = "creedflow_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "creedflow-desktop"
path = "src/main.rs"

[[bin]]
name = "creedflow-mcp-server"
path = "src/mcp_server/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
async-trait = "0.1"
dirs = "5"
sha2 = "0.10"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
regex = "1"
once_cell = "1"
open = "5"
printpdf = "0.7"
docx-rs = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
